# zip

./: 0_build.txt  Cargo.toml  FILETREE  LICENSE  README.md  dioxus.toml  docker-compose.yml
.github/workflows/: ci.yml
benches/: main.rs
embed/: Cargo.toml
embed/src/: lib.rs
examples/: main.rs
src/: config.rs  errors.rs  lib.rs  main.rs  paymail_config.rs  storage.rs  utils.rs
src/auth/: auth.rs  mod.rs  oauth.rs  passkey.rs  session.rs
src/blockchain/: mod.rs  paymail.rs  transaction.rs  wallet.rs
src/config/: env.rs  mod.rs
src/integrations/: mod.rs  nprint.rs  rustbus.rs
src/ui/: mod.rs  router.rs  styles.rs  transitions.rs
src/ui/components/: app.rs  auth.rs  auth_callback.rs  auth_form.rs  dashboard.rs  error.rs  history.rs  home.rs  loading.rs  logout.rs  mod.rs  nav.rs  notifications.rs  payment_form.rs  profile.rs  settings.rs  swipe_button.rs  theme.rs  theme_switcher.rs  wallet.rs
src/utils/: auth.rs  cache.rs  crypto.rs  error.rs  logging.rs  metrics.rs  misc.rs  mod.rs  rate_limiter.rs  security.rs  session.rs  telemetry.rs  validation.rs
tests/: auth_tests.rs  blockchain_tests.rs  config_tests.rs  integration_tests.rs  storage_tests.rs  ui_tests.rs  utils_tests.rs
