[package]
name = "zip"
version = "0.1.0"
edition = "2024"
description = "High-performance, non-custodial BSV wallet with swipe-to-pay and PayMail"
license = "Open BSV"
repository = "https://github.com/murphsicles/zip"

[dependencies]
dioxus = { version = "0.6", features = ["desktop", "mobile", "skia"], optional = true }
dioxus-motion = { version = "0.2", optional = true }
keyring = "2.3"
nprint-core = { git = "https://github.com/murphsicles/nPrint", tag = "v0.1", package = "nprint-core", optional = true }
nprint-protocols = { git = "https://github.com/murphsicles/nPrint", tag = "v0.1", package = "nprint-protocols", optional = true }
nprint-types = { git = "https://github.com/murphsicles/nPrint", tag = "v0.1", package = "nprint-types", optional = true }
nprint-templates = { git = "https://github.com/murphsicles/nPrint", tag = "v0.1", package = "nprint-templates", optional = true }
oauth2 = "5.0.0"
openidconnect = "3.5"
parking_lot = "0.12"
paymail-rs = { git = "https://github.com/murphsicles/paymail-rs", tag = "v0.1.0" }
qrcode = "0.13"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.35"
rustbus = { git = "https://github.com/murphsicles/RustBus", tag = "v0.1.1", optional = true }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.4.3" }
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.41", features = ["full"] }
totp-rs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4"] }
webauthn-rs = "0.5"

[features]
default = ["ui"]
ui = ["dioxus", "dioxus-motion"]
nprint-core = ["nprint-core"]
nprint-protocols = ["nprint-protocols"]
nprint-types = ["nprint-types"]
nprint-templates = ["nprint-templates"]
advanced = ["nprint-core", "nprint-protocols", "nprint-types", "nprint-templates", "rustbus"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
debug = true

[workspace]
members = ["embed"]

[workspace.dependencies]
zip = { path = "." }
