[package]
name = "zip-embed"
version = "0.1.0"
edition = "2024"
description = "Embeddable swipe-to-pay button for Zip wallet"
license = "Open BSV"
repository = "https://github.com/murphsicles/zip"

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "skia"] }
paymail-rs = { git = "https://github.com/murphsicles/paymail-rs", tag = "v0.1.0" }
serde = { version = "1.0", features = ["derive"] }
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.4.3" }
tokio = { version = "1.41", features = ["full"] }
thiserror = "1.0"
zip = { path = ".." }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
