[package]
name = "zip-embed"
version = "0.1.0"
edition = "2024"
description = "Embeddable swipe-to-pay button for Zip wallet"
license = "Open BSV"
repository = "https://github.com/murphsicles/zip"

[dependencies]
zip = { path = ".." }
dioxus = { version = "0.6.3", features = ["web", "desktop", "mobile"], optional = true }
dioxus-motion = { version = "0.3.1", optional = true }
async-graphql = { version = "7.0.7", optional = true }
paymail-rs = { git = "https://github.com/murphsicles/paymail-rs", tag = "v0.1.0" }
serde = { version = "1.0", features = ["derive"] }
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.4.4" }
tokio = { version = "1.41", features = ["full"] }
proc-macro-crate = "3.1.0"
qrcode = "0.14.1"
rand = "0.9.2"
secrecy = "0.10.3"
thiserror = "2.0.12"

[features]
default = ["ui"]
ui = ["dioxus", "dioxus-motion", "zip/ui"]
graphql = ["dep:async-graphql", "zip/graphql"]
